feat: minor change(tu: 1m)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactjs-social-login",
   "version": "2.6.1",
   "description": "Group social login for ReactJS",
-  "author": "Nguyen Manh Cuong ",
+  "author": "Connor Wang",
   "license": "MIT",
   "repository": {
     "type": "git",
