--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
-    "typeRoots": ["dist/index.d.ts"]
+    "typeRoots": ["dist/index.d.ts"],
+    "types": ["node"]
   },
 
   "include": ["src/**/*.ts", "src/**/*.tsx"],
